@@ -283,7 +283,7 @@ public final class DataField extends Field<DataField.Value>
 	public void set(final Item item, final Value data) throws MandatoryViolationException, DataLengthViolationException
 	{
 		if(isfinal)
-			throw new FinalViolationException(this, item);
+			throw new FinalViolationException(this, this, item);
 
 		if(data==null)
 		{
