@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* FinalViolation for PriceField has PriceField itself as feature, not the from-Field of the PriceField
+	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
 * MandatoryViolation for Media has Media itself as feature, not the body of the Media
 	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
 * added Model.containsTypeSet
